# CGARF

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  key.cfg.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-swebench.txt  requirements.txt  setup.py
.github/: pull_request_template.md
config/: defaults.yaml
docs/: APPENDIX_C_CG_MAD_FINAL_ZH.md  APPENDIX_D_SRCD_FINAL_ZH.md  DOCKER.md  GITHUB_PUBLISHING.md  PUBLIC_RELEASE_SCOPE.md
evaluation/: __init__.py  run.py
input/: agentless.jsonl
scripts/: convert_all_localization_methods.py  convert_orcaloca_to_jsonl.py  example_multi_method_usage.py  extract_swebench_instance.py  run_swebench_experiments.py  run_tests.py  validate_jsonl.py
src/: __init__.py
src/common/: __init__.py  data_structures.py  llm_interface.py  runtime_config.py  utils.py
src/crg/: __init__.py  agent_manager.py  crg_builder.py  edge_weight_manager.py  path_processing.py
src/environment/: __init__.py  benchmark.py  utils.py
src/evaluation/: __init__.py  evaluation_suite.py
src/phase0_integrator/: __init__.py  fault_localization_loader.py
src/phase1_causal_analysis/: CRG_CONSTRUCTION_GUIDE.md  __init__.py  batch_cg_mad.py  batch_crg_constructor.py  causal_relevance_graph.py  cg_mad.py  code_graph_builder.py  graph_storage.py  llm_edge_weighting.py
src/pipeline/: __init__.py  cgarf_pipeline_v2.py  pipeline_orchestrator.py
src/runners/: __init__.py
src/srcd/: __init__.py  batch_distillation.py  (+5 more)
tests/: __init__.py  conftest.py
(+39 files in other folders)
